***** =15:27= losing hope this will work due to complex nature of revit elements
[[revit forum thread][https://forums.autodesk.com/t5/revit-api-forum/recreate-elements-between-revit-projects/td-p/13220620]]
***** =20:58= lost access to gpt o1 and don't know how to continue on my own, leaving it for later
[[chatgpt][https://chatgpt.com/c/67642cda-3ef0-800c-b89e-aa1d7283bc31]]
***** =22:51= realized that there are builtin commands in revit already to save as "library" group or view and corresponding command to load/insert them
they may have some limitations that I haven't discovered yet, like placing them in the same location as in the original file
in these situations my Copy/PasteCrossSession commands may still prove useful
while they are not perfect, they correctly place most of detail items in same locations
they are fairly convenient, invoking any one of them automatically select currently selected group or currently active window
it may still worth though to write separarate commands to perform bulk exports to avoid having to open entire project in the future when certain detail items are needed
*** 19
**** =13:58= minor fix to "SelectAllElementsInView" command to prevent it from selecting views
*** 20
**** =01:41= tried adding "ExportSelectedViews" command to automate export process of revit sheets to separate files, but it was confirmed that it isn't available in API
only possible via PostableCommand
[[Jeremy Tammik on autodesk forum][https://forums.autodesk.com/t5/revit-api-forum/api-version-of-quot-save-as-gt-library-quot/m-p/12452936/highlight/true#M75998]]
* 2025
** January
*** 06
**** =12:18= updated IncrementSheetNumbers command to handle different numbering format
needed to update sheets numbered with a hyphen in third place, e.g. 35-501, 35-502
hopefully it won't get more complex than that, wish we just all followed the iso standard